--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Basic Layout</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Victor Asuquo | WDD131 | Basic Layout" />
     <link href="styles/layout.css" rel="stylesheet" />
   </head>
   <body class="container">
