--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Basic Layout</title>
+    <title>Victor Asuquo | WDD 131</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Victor Asuquo | WDD131 | Basic Layout" />
