--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -8,15 +8,16 @@
     <link href="styles/layout.css" rel="stylesheet" />
   </head>
   <body class="container">
-    <header>Header Content</header>
-    <nav>
-      <div class="menu">
+    <header>
+      <h4>Header Content</h4>
+      <nav>
         <a href="#">Home</a>
         <a href="#">Projects</a>
         <a href="#">Services</a>
         <a href="#">Contact Us</a>
-      </div>
-    </nav>
+      </nav>
+    </header>
+
     <main>Main Content</main>
     <aside>Aside Content</aside>
     <footer>Footer Content</footer>
