--- a/week01/index.html
+++ b/week01/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
   <head>
     <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta
       name="description"
-      content="WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment Home Page"
-    />
-    <meta name="author" content="Victor Asuquo" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      content="WDD131 - Dynamic Web Fundamentals - Victor Asuquo - Home Page"
+    >
+    <meta name="author" content="Victor Asuquo" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
       rel="stylesheet"
-    />
-    <link href="styles/base.css" rel="stylesheet" />
+    >
+    <link href="styles/base.css" rel="stylesheet" >
     <script src="scripts/getdates.js" defer></script>
   </head>
   <body>
@@ -41,7 +41,7 @@
     </header>
     <main>
       <section class="card">
-        <div class="title">About Me</div>
+        <h2 class="title">About Me</h2>
         <div class="about">
           <p class="me">
             My name is Victor Asuquo. I am a nigerian and I leave in Ibadan. I
@@ -52,12 +52,12 @@
             course in software development at BYU-I. I love learning about new
             technologies.
           </p>
-          <img src="images/VApassport.png" alt="Victor Asuquo" />
+          <img src="images/VApassport.png" alt="Victor Asuquo" >
         </div>
         <p class="city">Ibadan, Nigeria</p>
         <div class="country">
           <div class="flag">
-            <img src="images/nigerian.png" alt="Nigeria" />
+            <img src="images/nigerian.png" alt="Nigeria" >
             <p class>Official flag of Nigeria</p>
           </div>
 
@@ -71,7 +71,7 @@
         </div>
       </section>
       <section class="card">
-        <div class="title">Web Dev Resources</div>
+        <h2 class="title">Web Dev Resources</h2>
         <div class="dev">
           <ul>
             <li><a href="https://dev.to/">Dev to Community</a></li>
