--- a/week01/index.html
+++ b/week01/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <meta name="description" content="WDD131 Dynamic Web Fundamentals Home Page">
     <meta name="author" content="Victor Asuquo Country Nigeria">
-    <title>wdd131</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" >
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
