--- a/week01/index.html
+++ b/week01/index.html
@@ -29,10 +29,8 @@
           >LinkedIn</a
         >
         <a href="https://byui.instructure.com/">I-Learn</a>
-        <a
-          href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
-          >Scripture</a
-        >
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
+          >Scripture</a>
         <a href="#">Final Project</a>
       </nav>
     </header>
