--- a/week01/index.html
+++ b/week01/index.html
@@ -3,11 +3,9 @@
   <head>    
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <meta name="description" content="WDD131 Dynamic Web Fundamentals Home Page">
-    <meta name="author" content="Victor Asuquo Country Nigeria">
-    <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <meta name="description" content='WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment: Home Page'>
+    <meta name="author" content='Victor Asuquo'>
+    <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>    
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
       rel="stylesheet"
