--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8 ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment: Home Page">
+  <meta name="author" content="Victor Asuquo">
   <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
 </head>
 <body>
