--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment: Home Page">
   <meta name="author" content="Victor Asuquo ">
   <link rel="stylesheet" href="styles/base.css">
+  <script src="scripts/getdates.js" defer></script>
   <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
 </head>
 <body>
