--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
   <header></header>
   <main></main>
-  <footer></footer>
+  <footer>
+    <p>&copy;<span id="currentyear"></span> 🌹 Victor Asuquo 🌹 Nigeria</p>
+    <p class="modi"><span id="lastModified"></span></p>
+  </footer>
   
 </body>
 </html>
