--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <h1>WDD131:Dynamic Web Fundamentals - <span class="colorme">Victor Asuquo</span></h1>
+  </header>
   <main></main>
   <footer>
     <p>&copy;<span id="currentyear"></span> 🌹 Victor Asuquo 🌹 Nigeria</p>
