--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 </head>
 <body>
   <header>
-    <h1>WDD131:Dynamic Web Fundamentals - <span class="colorme">Victor Asuquo</span></h1>
+    <div class="head">
+      <h1>
+        WDD131:Dynamic Web Fundamentals - <span class="colorme">Victor Asuquo</span>
+      </h1>
+    </div>
+
+    <nav>
+      <a href="https://www.linkedin.com/in/victor-asuquo-7a004247/"
+        >LinkedIn</a
+      >
+      <a href="https://byui.instructure.com/">I-Learn</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
+        >Scripture</a>
+      <a href="#">Final Project</a>
+    </nav>
   </header>
   <main></main>
   <footer>
