--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8 ">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment: Home Page">
-  <meta name="author" content="Victor Asuquo ">
-  <link rel="stylesheet" href="styles/base.css">
-  <script src="scripts/getdates.js" defer></script>
-  <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
-</head>
-<body>
-  <header>
-    <div class="head">
-      <h1>
-        WDD131:Dynamic Web Fundamentals - <span class="colorme">Victor Asuquo</span>
-      </h1>
-    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment: Home Page"
+    />
+    <meta name="author" content="Victor Asuquo" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <script src="scripts/getdates.js" defer></script>
+    <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
+  </head>
+  <body>
+    <header>
+      <div class="head">
+        <h1>
+          WDD131:Dynamic Web Fundamentals -
+          <span class="colorme">Victor Asuquo</span>
+        </h1>
+      </div>
 
-    <nav>
-      <a href="https://www.linkedin.com/in/victor-asuquo-7a004247/"
-        >LinkedIn</a
-      >
-      <a href="https://byui.instructure.com/">I-Learn</a>
-      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
-        >Scripture</a>
-      <a href="#">Final Project</a>
-    </nav>
-  </header>
-  <main></main>
-  <footer>
-    <p>&copy;<span id="currentyear"></span> 🌹 Victor Asuquo 🌹 Nigeria</p>
-    <p class="modi"><span id="lastModified"></span></p>
-  </footer>
-  
-</body>
+      <nav>
+        <a href="https://www.linkedin.com/in/victor-asuquo-7a004247/"
+          >LinkedIn</a
+        >
+        <a href="https://byui.instructure.com/">I-Learn</a>
+        <a
+          href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng"
+          >Scripture</a
+        >
+        <a href="#">Final Project</a>
+      </nav>
+    </header>
+    <main></main>
+    <footer>
+      <p>&copy;<span id="currentyear"></span> 🌹 Victor Asuquo 🌹 Nigeria</p>
+      <p class="modi"><span id="lastModified"></span></p>
+    </footer>
+  </body>
 </html>
