--- a/index.html
+++ b/index.html
@@ -33,7 +33,50 @@
         <a href="#">Final Project</a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="card">
+        <h1 class="title">About Me</h1>
+        <div class="about">
+          <p class="me">
+            My name is Victor Asuquo. I am a nigerian and I leave in Ibadan. I
+            am happily married with 3 children, 2 boys and a girl. My daughter
+            is currently serving a mission in Port-Harcourt Nigeria mission. I
+            love IT and have worked in several IT fields like networking, system
+            administration. I love programming and I am currently taking a
+            course in software development at BYU-I. I love learning about new
+            technologies.
+          </p>
+          <img src="images/VApassport.png" alt="Victor Asuquo" />
+        </div>
+        <p class="city">Ibadan, Nigeria</p>
+        <div class="country">
+          <div class="flag">
+            <img src="images/nigerian.png" alt="Nigeria" />
+            <p class>Official flag of Nigeria</p>
+          </div>
+
+          <p>
+            Nigeria is located on the west coast of Africa and is the most
+            populous black country in the world, bordering the North Atlantic
+            Ocean, between Benin and Cameroon. Nigeria covers 356,668 sq miles
+            (923,7770 sq kilometers). It is about the same size as California,
+            Nevada and Utah combined. Nigeria is diverse in people and culture.
+          </p>
+        </div>
+      </section>
+      <section class="card">
+        <h2 class="title">Web Dev Resources</h2>
+        <div class="dev">
+          <ul>
+            <li><a href="https://dev.to/">Dev to Community</a></li>
+            <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+            <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+            <li><a href="https://www.cssportal.com/">CSS Tools</a></li>
+            <li><a href="https://www.udemy.com/">Udemy</a></li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <footer>
       <p>&copy;<span id="currentyear"></span> 🌹 Victor Asuquo 🌹 Nigeria</p>
       <p class="modi"><span id="lastModified"></span></p>
