--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8 " />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment: Home Page"
-    />
-    <meta name="author" content="Victor Asuquo" />
-    <link rel="stylesheet" href="styles/base.css" />
+  >
+    <meta name="author" content="Victor Asuquo">
+    <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
     <title>WDD 131 - Dynamic Web Fundamentals - Victor Asuquo</title>
   </head>
