--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
       content="WDD 131 - Dynamic Web Fundamentals | Victor Asuquo | W01 Assignment: Home Page"
@@ -46,12 +46,12 @@
             course in software development at BYU-I. I love learning about new
             technologies.
           </p>
-          <img src="images/VApassport.png" alt="Victor Asuquo" />
+          <img src="images/VApassport.png" alt="Victor Asuquo">
         </div>
         <p class="city">Ibadan, Nigeria</p>
         <div class="country">
           <div class="flag">
-            <img src="images/nigerian.png" alt="Nigeria" />
+            <img src="images/nigerian.png" alt="Nigeria">
             <p class>Official flag of Nigeria</p>
           </div>
 
