--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
     <main>
       <section class="card">
-        <h2 class="title">About Me</h2>
+        <p class="title">About Me</p>
         <div class="about">
           <p class="me">
             My name is Victor Asuquo. I am a nigerian and I leave in Ibadan. I
@@ -65,7 +65,7 @@
         </div>
       </section>
       <section class="card">
-        <h2 class="title">Web Dev Resources</h2>
+        <p class="title">Web Dev Resources</p>
         <div class="dev">
           <ul>
             <li><a href="https://dev.to/">Dev to Community</a></li>
