--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       </nav>
     </header>
     <main>
-      <section class="card">
-        <h2 class="title">About Me</h2>
+      <section>
+        <div class="card">
+          <h2 class="title">About Me</h2>
         <div class="about">
           <p class="me">
             My name is Victor Asuquo. I am a nigerian and I leave in Ibadan. I
@@ -63,9 +64,12 @@
             Nevada and Utah combined. Nigeria is diverse in people and culture.
           </p>
         </div>
+        </div>
+        
       </section>
-      <section class="card">
-        <h2 class="title">Web Dev Resources</h2>
+      <section>
+        <div class="card">
+          <h2 class="title">Web Dev Resources</h2>
         <div class="dev">
           <ul>
             <li><a href="https://dev.to/">Dev to Community</a></li>
@@ -75,6 +79,8 @@
             <li><a href="https://www.udemy.com/">Udemy</a></li>
           </ul>
         </div>
+        </div>
+        
       </section>
     </main>
     <footer>
