--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       </nav>
     </header>
     <main>
-      <section>
-        <div class="card">
+      <section class="card">
           <h2 class="title">About Me</h2>
         <div class="about">
           <p class="me">
@@ -64,11 +63,9 @@
             Nevada and Utah combined. Nigeria is diverse in people and culture.
           </p>
         </div>
-        </div>
         
       </section>
-      <section>
-        <div class="card">
+      <section class="card">
           <h2 class="title">Web Dev Resources</h2>
         <div class="dev">
           <ul>
@@ -78,9 +75,7 @@
             <li><a href="https://www.cssportal.com/">CSS Tools</a></li>
             <li><a href="https://www.udemy.com/">Udemy</a></li>
           </ul>
-        </div>
-        </div>
-        
+        </div>        
       </section>
     </main>
     <footer>
