--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="head">
         <h1>
-          WDD131:Dynamic Web Fundamentals -
+          WDD 131 - Dynamic Web Fundamentals -
           <span class="colorme">Victor Asuquo</span>
         </h1>
       </div>
