--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="head">
-        WDD131:Dynamic Web Fundamentals - <span class="colorme">Victor Asuquo</span>
+        <h1>WDD131:Dynamic Web Fundamentals - <span class="colorme">Victor Asuquo</span></h1>
       </div>
 
       <nav>
