--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -23,8 +23,9 @@
                 <h2>Helaman 12:24</h2>
                 <p>And may God grant, in his great fulness, that men might be brought unto repentance and good works, that they might be restored unto grace for agrace, according to their works.</p>
             </section>
-        </main>
-    
+        </main>    
     </body>
-    <footer><p>Victor Asuquo</p></footer>
+    <footer>
+        <p>Victor Asuquo</p>
+    </footer>
 </html>
