--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header class="general"><h1>Media Query Example</h1></header>
-        <main>
+        <main class="general">
             <section>
                 <h2>2 Nephi 32:9</h2>
                 <p>But behold, I say unto you that ye must apray always, and not faint; that ye must not perform any thing unto the Lord save in the first place ye shall bpray unto the Father in the cname of Christ, that he will dconsecrate thy performance unto thee, that thy performance may be for the ewelfare of thy soul.</p>
@@ -24,7 +24,7 @@
                 <p>And may God grant, in his great fulness, that men might be brought unto repentance and good works, that they might be restored unto grace for agrace, according to their works.</p>
             </section>
         </main>  
-        <footer>
+        <footer class="general">
             <p>Victor Asuquo</p>
         </footer>  
     </body>
