--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -13,7 +13,9 @@
         <link href="styles/media-query-large.css" rel="stylesheet">
     </head>
     <body>
-        <header><h1>Media Query Example</h1></header>
+        <header>
+            <h1>Media Query Example</h1>
+        </header>
         <main>
             <section>
                 <h2>2 Nephi 32:9</h2>
