--- a/temples.html
+++ b/temples.html
@@ -17,7 +17,7 @@
         <header>
             <h1>Temple Album</h1>
 
-            <button id="menu"></button>
+            <button id="menu" aria-label="menu"></button>
             <nav class="navigation">
               <a href="#" >Home</a>
               <a href="#" >Old</a>
