--- a/project/index.html
+++ b/project/index.html
@@ -10,19 +10,24 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <link href="styles/ecommerse.css" rel="stylesheet">
-        <script src="scriipts/ecommerse.js"></script>
+        <script src="scriipts/ecommerse.js" defer></script>
     </head>
     <body>
         <header>
             <img src="images/logo.svg" alt="eCommerce Logo">
-            <nav>
-                <ul>
+            <nav>  
+                <div class="icons">
+                    <img id="i-bag" src="images/2703085_bag_cart_ecommerce_shop_icon.svg" alt="Cart">
+                    <img id="menu" src="images/8559865_hamburger_menu_navbar_options_icon.svg" alt="menu">
+                </div>              
+                <ul class="navigation">
                     <li><a href="">Home</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
-                </ul>
+                    <li><a href="">Account</a></li>                                        
+                </ul> 
+                <img id="bag" src="images/2703085_bag_cart_ecommerce_shop_icon.svg" alt="Cart">               
             </nav>
         </header>
         <main>
