--- a/form.html
+++ b/form.html
@@ -26,11 +26,11 @@
                 </label>
 
                 <div>Overall Rating<span class="marker">*</span></div>
-                <label for="rating"><input type="radio" name="rating" id="rating" required value="1">&#9733;</label>  
-                <label for="rating"><input type="radio" name="rating" id="rating" required value="2">&#9733;&#9733;</label>
-                <label for="rating"><input type="radio" name="rating" id="rating" required value="3">&#9733;&#9733;&#9733;</label>
-                <label for="rating"><input type="radio" name="rating" id="rating" required value="4">&#9733;&#9733;&#9733;&#9733;</label>              
-                <label for="rating"><input type="radio" name="rating" id="rating" required value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</label> 
+                <label for="rating"><input type="radio" name="rating" id="rating1" required value="1">&#9733;</label>  
+                <label for="rating"><input type="radio" name="rating" id="rating2" required value="2">&#9733;&#9733;</label>
+                <label for="rating"><input type="radio" name="rating" id="rating3" required value="3">&#9733;&#9733;&#9733;</label>
+                <label for="rating"><input type="radio" name="rating" id="rating4" required value="4">&#9733;&#9733;&#9733;&#9733;</label>              
+                <label for="rating"><input type="radio" name="rating" id="rating5" required value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</label> 
                 <label for="installDate">Date of Installation<span class="marker">*</span> <input type="date" name="installDate" id="installDate" required></label>  
                 <p>Which features did you find useful in the product? Click all that apply</p>
                 <label for="durable"><input type="checkbox" name="durable" id="durable" value="yes">Durability</label>
