--- a/form.html
+++ b/form.html
@@ -26,19 +26,19 @@
                 </label>
 
                 <div>Overall Rating<span class="marker">*</span></div>
-                <label for="rating"><input type="radio" name="rating" id="rating1" required value="1">&#9733;</label>  
-                <label for="rating"><input type="radio" name="rating" id="rating2" required value="2">&#9733;&#9733;</label>
-                <label for="rating"><input type="radio" name="rating" id="rating3" required value="3">&#9733;&#9733;&#9733;</label>
-                <label for="rating"><input type="radio" name="rating" id="rating4" required value="4">&#9733;&#9733;&#9733;&#9733;</label>              
-                <label for="rating"><input type="radio" name="rating" id="rating5" required value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</label> 
-                <label for="installDate">Date of Installation<span class="marker">*</span> <input type="date" name="installDate" id="installDate" required></label>  
+                <label><input type="radio" name="rating" id="rating1" required value="1">&#9733;</label>  
+                <label><input type="radio" name="rating" id="rating2" required value="2">&#9733;&#9733;</label>
+                <label><input type="radio" name="rating" id="rating3" required value="3">&#9733;&#9733;&#9733;</label>
+                <label><input type="radio" name="rating" id="rating4" required value="4">&#9733;&#9733;&#9733;&#9733;</label>              
+                <label><input type="radio" name="rating" id="rating5" required value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</label> 
+                <label>Date of Installation<span class="marker">*</span> <input type="date" name="installDate" id="installDate" required></label>  
                 <p>Which features did you find useful in the product? Click all that apply</p>
-                <label for="durable"><input type="checkbox" name="durable" id="durable" value="yes">Durability</label>
-                <label for="ease"><input type="checkbox" name="ease" id="ease" value="yes">Ease of Use</label>
-                <label for="perform"><input type="checkbox" name="perform" id="perform" value="yes">Performance</label>
-                <label for="design"><input type="checkbox" name="design" id="design" value="Yes">Design</label> 
-                <label for="review">Written Review<span class="marker2">(optional)</span><textarea name="review" id="review" cols="20" rows="5"></textarea></label>
-                <label for="reviewer">Your Name <span class="marker2">(optional)</span><input type="text" name="reviewer"></label>
+                <label><input type="checkbox" name="durable" id="durable" value="yes">Durability</label>
+                <label><input type="checkbox" name="ease" id="ease" value="yes">Ease of Use</label>
+                <label><input type="checkbox" name="perform" id="perform" value="yes">Performance</label>
+                <label><input type="checkbox" name="design" id="design" value="Yes">Design</label> 
+                <label>Written Review<span class="marker2">(optional)</span><textarea name="review" id="review" cols="20" rows="5"></textarea></label>
+                <label>Your Name <span class="marker2">(optional)</span><input type="text" name="reviewer"></label>
 
                 <input type="submit" value="Send Us Your Feedback">
 
