--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
         <link href="styles/product.css" rel="stylesheet">
         <script src="scripts/product.js" defer></script>
     </head>
-    <body>
+    <body id="main">
         <header>
             <h1>Product Review</h1>
         </header>
@@ -40,7 +40,7 @@
                 <label>Written Review<span class="marker2">(optional)</span><textarea name="review" id="review" cols="20" rows="5"></textarea></label>
                 <label>Your Name <span class="marker2">(optional)</span><input type="text" name="reviewer"></label>
 
-                <input type="submit" value="Send Us Your Feedback">
+                <input type="submit" value="Let Us have Your Feedback">
 
             </form>
         </main>
