--- a/project/accounts.html
+++ b/project/accounts.html
@@ -13,21 +13,22 @@
         <link href="styles/ecommerse.css" rel="stylesheet">
         <script src="scriipts/ecommerse.js" defer></script>
     </head>
-    <body id="Home">
+    <body id="Account">
         <header>
             <div class="container">
-                <a href="index.html"><img id="logo" src="images/logo.webp" alt="eCommerce Logo"></a>                                
+                <img id="logo" src="images/logo.webp" alt="eCommerce Logo">                
                 <div class="layer">
                     <nav>  
                         <ul class="navigation">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="product.html">Products</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="account.html">Account</a></li>                                        
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">Account</a></li>                                        
                         </ul> 
                       </nav>
                       <div class="icons">
-                        <a href="cart.html"><img id="bag" src="images/cart.svg" alt="Cart"></a>                        
+                        <img id="bag" src="images/cart.svg" alt="Cart">
                         <img id="menu" src="images/hamburger.svg" alt="menu">
                       </div>                                    
                 </div>              
@@ -35,12 +36,7 @@
         </header>
         <main>
             <div class="container">
-                <section class="caption">
-                    <div class="quote">  
-                        <h1>Shopping has never been so easy!</h1>
-                        <p>Discover the magic of effortless shopping - where every click leads to delight. Welcome to your new favorite online destination.</p>
-                        <a href="" class="btn">Explore Now &#8594;</a>
-                    </div>                
+                <section class="caption">                    
                     <div class="hero">
                         <picture>
                             <source media="(min-width: 1000px)" srcset="images/hero2-large.webp">
@@ -48,17 +44,26 @@
                             <img src="images/hero-small.webp" alt="eCommerce image" width="500" height="500">
                         </picture>
                     </div>
-                </section>
-                <section class="featured-products">
-                    <h2 class="title">Featured Products</h2>
-                    <div class="f-products center">
-                    </div>
-                </section>
-                <section class="Latest-products">
-                    <h2 class="title">Latest Products</h2>
-                    <div class="l-products center">
-                    </div>
-                </section>
+                    <div class="form-container">  
+                        <div class="form-btn">
+                            <span id="login">Login</span>
+                            <span id="register">Register</span>
+                            <hr id="indicator">
+                        </div>
+                        <form id="LoginForm" action="">
+                            <input type="text" name="username" placeholder="Username">
+                            <input type="password" name="password" placeholder="Password">
+                            <input type="submit" name="login" value="Login" class="btn">
+                            <a href="">Forget password</a>
+                        </form>
+                        <form id="RegForm" action="">
+                            <input type="text" name="username" placeholder="Username">
+                            <input type="email" name="email" placeholder="Email">
+                            <input type="password" name="password" placeholder="Password">
+                            <input type="submit" name="register" value="Register" class="btn">                            
+                        </form>
+                    </div>                
+                </section>                
             </div>            
         </main>
         <footer>
