--- a/project/accounts.html
+++ b/project/accounts.html
@@ -13,18 +13,17 @@
         <link href="styles/ecommerse.css" rel="stylesheet">
         <script src="scriipts/ecommerse.js" defer></script>
     </head>
-    <body id="Account">
+    <body id="Accounts">
         <header>
             <div class="container">
                 <img id="logo" src="images/logo.webp" alt="eCommerce Logo">                
                 <div class="layer">
                     <nav>  
                         <ul class="navigation">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
-                            <li><a href="">About</a></li>
-                            <li><a href="">Contact</a></li>
-                            <li><a href="">Account</a></li>                                        
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="products.html">Products</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="accounts.html">Account</a></li>                                        
                         </ul> 
                       </nav>
                       <div class="icons">
