--- a/project/products.html
+++ b/project/products.html
@@ -13,7 +13,7 @@
         <link href="styles/ecommerse.css" rel="stylesheet">
         <script src="scriipts/ecommerse.js" defer></script>
     </head>
-    <body id="Home">
+    <body id="Products">
         <header>
             <div class="container">
                 <a href="index.html"><img id="logo" src="images/logo.webp" alt="eCommerce Logo"></a>                                
@@ -34,28 +34,17 @@
         </header>
         <main>
             <div class="container">
-                <section class="caption">
-                    <div class="quote">  
-                        <h1>Shopping has never been so easy!</h1>
-                        <p>Discover the magic of effortless shopping - where every click leads to delight. Welcome to your new favorite online destination.</p>
-                        <a href="" class="btn">Explore Now &#8594;</a>
-                    </div>                
-                    <div class="hero">
-                        <picture>
-                            <source media="(min-width: 1000px)" srcset="images/hero2-large.webp">
-                            <source media="(min-width: 500px)" srcset="images/hero-medium.webp">
-                            <img src="images/hero-small.webp" alt="eCommerce image" width="500" height="500">
-                        </picture>
-                    </div>
-                </section>
-                <section class="featured-products">
-                    <h2 class="title">Featured Products</h2>
-                    <div class="f-products center">
-                    </div>
-                </section>
-                <section class="Latest-products">
-                    <h2 class="title">Latest Products</h2>
-                    <div class="l-products center">
+                <div class="row">
+                    <h2>All Products</h2>
+                    <select name="category" id="category">
+                        <option value="">Default sorting</option>
+                        <option value="">Sort by category</option>
+                        <option value="">Sort by price</option>
+                        <option value="">Sort by rating</option>
+                    </select>
+                </div>
+                <section class="all-products">    
+                    <div class="a-products center">
                     </div>
                 </section>
             </div>            
