--- a/project/accounts.html
+++ b/project/accounts.html
@@ -22,12 +22,11 @@
                         <ul class="navigation">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="products.html">Products</a></li>
-                            <li><a href="contact.html">Contact</a></li>
                             <li><a href="accounts.html">Account</a></li>                                        
                         </ul> 
                       </nav>
                       <div class="icons">
-                        <img id="bag" src="images/cart.svg" alt="Cart">
+                        <a href="cart.html"><img id="bag" src="images/cart.svg" alt="Cart"></a> 
                         <img id="menu" src="images/hamburger.svg" alt="menu">
                       </div>                                    
                 </div>              
