--- a/project/products.html
+++ b/project/products.html
@@ -37,10 +37,13 @@
                 <div class="row">
                     <h2>All Products</h2>
                     <select name="category" id="category">
-                        <option value="">Default sorting</option>
-                        <option value="">Sort by category</option>
-                        <option value="">Sort by price</option>
-                        <option value="">Sort by rating</option>
+                        <option value="all">Select an option...</option>
+                        <option value="mens">Men's Ware</option>
+                        <option value="womens">Women's ware</option>
+                        <option value="jewelries">Jewelries</option>
+                        <option value="electronics">Electronics</option>
+                        <option value="shoes">Shoes</option>                        
+                        <option value="watches">Watches</option>
                     </select>
                 </div>
                 <section class="all-products">    
