--- a/project/cart.html
+++ b/project/cart.html
@@ -33,7 +33,7 @@
             </div>            
         </header>
         <main>
-            <div class="container cart-page">
+            <div class="container caption cart-page">
                 <table>
                     
                 </table>
