--- a/project/accounts.html
+++ b/project/accounts.html
@@ -49,15 +49,16 @@
                             <hr id="indicator">
                         </div>
                         <form id="LoginForm" action="">
-                            <input type="text" name="username" placeholder="Username">
-                            <input type="password" name="password" placeholder="Password">
+                            <input type="text" id="username" name="username" placeholder="Username" required>
+                            <input type="password" name="password" placeholder="Password" required>
                             <input type="submit" name="login" value="Login" class="btn">
                             <a href="">Forget password</a>
                         </form>
-                        <form id="RegForm" action="">
-                            <input type="text" name="username" placeholder="Username">
-                            <input type="email" name="email" placeholder="Email">
-                            <input type="password" name="password" placeholder="Password">
+                        <form id="RegForm" action="" method="get">
+                            <input id="output" type="hidden">
+                            <input type="text" name="username" placeholder="Username" required>
+                            <input type="email" name="email" placeholder="Email" required>
+                            <input type="password" name="password" placeholder="Password" required>
                             <input type="submit" name="register" value="Register" class="btn">                            
                         </form>
                     </div>                
