--- a/project/cart.html
+++ b/project/cart.html
@@ -27,13 +27,15 @@
                       </nav>
                       <div class="icons">
                         <a class="cart-link" href="cart.html"><img id="bag" src="images/cart.svg" alt="Cart"></a>                        
-                        <img id="menu" src="images/hamburger.svg" alt="menu">
-                      </div>                                    
-                </div>              
+                        <img id="menu" src="images/hamburger.svg" alt="menu"> 
+                        <div class="user"></div>                         
+                      </div> 
+                                                         
+                </div>                              
             </div>            
         </header>
         <main>
-            <div class="container caption cart-page">
+            <div class="container  cart-page">
                 <table>
                     
                 </table>
