--- a/project/product.html
+++ b/project/product.html
@@ -28,8 +28,10 @@
                       <div class="icons">
                         <a href="cart.html"><img id="bag" src="images/cart.svg" alt="Cart"></a>                        
                         <img id="menu" src="images/hamburger.svg" alt="menu">
+                        <div class="user"></div> 
                       </div>                                    
-                </div>              
+                </div> 
+                             
             </div>            
         </header>
         <main>
