--- a/project/products.html
+++ b/project/products.html
@@ -29,7 +29,8 @@
                         <a href="cart.html"><img id="bag" src="images/cart.svg" alt="Cart"></a>                        
                         <img id="menu" src="images/hamburger.svg" alt="menu">
                       </div>                                    
-                </div>              
+                </div>
+                <div class="user"></div>               
             </div>            
         </header>
         <main>
