--- a/project/accounts.html
+++ b/project/accounts.html
@@ -16,7 +16,7 @@
     <body id="Accounts">
         <header>
             <div class="container">
-                <img id="logo" src="images/logo.webp" alt="eCommerce Logo">                
+                <a href="index.html"><img id="logo" src="images/logo.webp" alt="eCommerce Logo"></a>  
                 <div class="layer">
                     <nav>  
                         <ul class="navigation">
