--- a/project/products.html
+++ b/project/products.html
@@ -48,7 +48,7 @@
                         <option value="watches">Watches</option>
                     </select>
                 </div>
-                <section class="all-products">    
+                <section class="all-products caption">    
                     <div class="a-products center">
                     </div>
                 </section>
