--- a/project/product.html
+++ b/project/product.html
@@ -26,7 +26,7 @@
                         </ul> 
                       </nav>
                       <div class="icons">
-                        <a href="cart.html"><img id="bag" src="images/cart.svg" alt="Cart"></a>                        
+                        <a class="cart-link" href="cart.html"><img id="bag" src="images/cart.svg" alt="Cart"><span class="badge"></span></a> 
                         <img id="menu" src="images/hamburger.svg" alt="menu">
                         <div class="user"></div> 
                       </div>                                    
